<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CClima</string>
    <string name="action_settings">Action Setings! </string>
    <string name="buscando">Buscando...</string>
    <string name="temperatura_actual">Temperatura: </string>
    <string name="temperatura_maxima">Tª m�xima: </string>
    <string name="temperatura_minima">Tª m�nima: </string>
    <string name="precipitacions">Precipitaci�ns: </string>
    <string name="boton">Descargar Informaci�n</string>
</resources>
