<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">
    <TextView
        android:id="@+id/lTemperaturaActual"
        android:text="@string/temperatura_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
    <TextView
        android:id="@+id/TemperaturaActual"
        android:layout_alignBaseline="@id/lTemperaturaActual"
        android:layout_toRightOf="@id/lTemperaturaActual"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buscando"
    />
    <TextView
        android:id="@+id/lTemperaturaMaxima"
        android:layout_below="@id/lTemperaturaActual"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/temperatura_maxima"
     />
    <TextView
        android:id="@+id/TemperaturaMaxima"
        android:layout_alignBaseline="@id/lTemperaturaMaxima"
        android:layout_toRightOf="@id/lTemperaturaMaxima"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buscando"
        />
    <TextView
        android:id="@+id/lTemperaturaMinima"
        android:layout_below="@id/lTemperaturaMaxima"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/temperatura_minima"
    />
    <TextView
        android:id="@+id/TemperaturaMinima"
        android:layout_alignBaseline="@id/lTemperaturaMinima"
        android:layout_toRightOf="@id/lTemperaturaMinima"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buscando"
        />
    <TextView
        android:id="@+id/lPrecipitacions"
        android:layout_below="@id/lTemperaturaMinima"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/precipitacions"
    />
    <TextView
        android:id="@+id/Precipitacions"
        android:layout_below="@id/lPrecipitacions"
        android:layout_alignBaseline="@id/lPrecipitacions"
        android:layout_toRightOf="@id/lPrecipitacions"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buscando"
     />

    <Button
        android:id="@+id/bBuscar"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Precipitacions"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/boton"
        android:onClick="descargarDatos"
    />

</RelativeLayout>
